[package]
name = "SANDHYA"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-rand = "0.15.0"
polars = { version = "0.50.0", features = ["lazy", "ndarray", "parquet"] }
rayon = "1.10.0"
strum = "0.27.2"
strum_macros = "0.27.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true 
